fix: token correction, refactor for readability

--- a/src/components/reusable/multiInputEmailInvite/multiInputEmailInvite.scss
+++ b/src/components/reusable/multiInputEmailInvite/multiInputEmailInvite.scss
@@ -107,7 +107,7 @@
     @include typography.type-body-02;
     cursor: pointer;
     transition: background-color 150ms ease-out;
-    background-color: var(--kd-color-background-ui-hollow-default);
+    background-color: var(--kd-color-background-accent-light);
 
     &:hover,
     &.highlighted {
